--- a/contato.html
+++ b/contato.html
@@ -211,7 +211,66 @@
             <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
         </div>
     </footer>
+<script>
+    // === MENU MOBILE ===
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navLinks = document.querySelector('.nav-links');
 
+    menuToggle.addEventListener('click', () => {
+        navLinks.classList.toggle('active');
+    });
+
+    // === HEADER SCROLL ===
+    window.addEventListener('scroll', () => {
+        const header = document.querySelector('header');
+        if (window.scrollY > 100) {
+            header.classList.add('scrolled');
+        } else {
+            header.classList.remove('scrolled');
+        }
+    });
+
+    // === FORMULÁRIO DE CONTATO ===
+    const contactForm = document.getElementById('contactForm');
+
+    contactForm.addEventListener('submit', async (e) => {
+        e.preventDefault(); // Impede o reload da página
+
+        const formData = new FormData(contactForm);
+
+        try {
+            // Envia os dados para o FormSubmit
+            const response = await fetch("https://formsubmit.co/igornovais.sft@gmail.com", {
+                method: "POST",
+                body: formData
+            });
+
+            if (response.ok) {
+                alert('✅ Mensagem enviada com sucesso! Entraremos em contato em breve.');
+                contactForm.reset();
+            } else {
+                alert('❌ Erro ao enviar o formulário. Tente novamente mais tarde.');
+            }
+        } catch (error) {
+            alert('❌ Ocorreu um erro inesperado. Verifique sua conexão e tente novamente.');
+            console.error(error);
+        }
+    });
+
+    // === MÁSCARA DE TELEFONE ===
+    const telefoneInput = document.getElementById('telefone');
+
+    telefoneInput.addEventListener('input', (e) => {
+        let value = e.target.value.replace(/\D/g, '');
+
+        if (value.length <= 11) {
+            value = value.replace(/^(\d{2})(\d)/g, '($1) $2');
+            value = value.replace(/(\d)(\d{4})$/, '$1-$2');
+        }
+
+        e.target.value = value;
+    });
+</script>
 
 </body>
 </html>
