--- a/contato.html
+++ b/contato.html
@@ -103,7 +103,7 @@
                 <label for="mensagem">Mensagem *</label>
                 <textarea id="mensagem" name="mensagem" required placeholder="Descreva sua situação ou dúvida..."></textarea>
             </div>
-            <input type="hidden" name="_next" value="https://igornovaiss.github.io/igor/">
+            <input type="hidden" name="_next" value="https://igornovaiss.github.io/cnhemdia/contato.html">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Nova mensagem do site CNH em Dia!">
             <button type="submit" class="submit-button">Enviar Mensagem</button>
