--- a/contato.html
+++ b/contato.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - CNH em Dia</title>
+    <title>Contato - CNH em Dia Soluções</title>
     <meta name="description" content="Entre em contato com a CNH em Dia. Atendimento especializado para resolver problemas com sua habilitação.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia</span></a>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -47,7 +47,7 @@
             <div class="contact-item">
                 <div class="contact-item-icon">✉️</div>
                 <h3>E-mail</h3>
-                <p>contato@cnhemdia.com.br</p>
+                <p>contato@cnhemdiasolucoes.com.br</p>
                 <p style="font-size: 0.9rem; opacity: 0.8;">Resposta em até 24h</p>
             </div>
 
@@ -174,7 +174,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>CNH em Dia</h3>
+                <h3>CNH em Dia Soluções</h3>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
@@ -201,14 +201,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdia.com.br</li>
+                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
                     <li>📍 São Paulo - SP</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
 <script>
