--- a/cassacao.html
+++ b/cassacao.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassação da CNH - CNH em Dia</title>
+    <title>Cassação da CNH - CNH em Dia Soluções</title>
     <meta name="description" content="Defesa contra cassação da CNH. Assessoria jurídica e administrativa para proteger seus direitos em processos de cassação.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia</span></a>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -131,7 +131,7 @@
 
             <h2>Nossos Serviços em Cassação da CNH</h2>
 
-            <p>A CNH em Dia oferece assessoria completa e especializada para condutores que enfrentam processos de cassação:</p>
+            <p>A CNH em Dia Soluções oferece assessoria completa e especializada para condutores que enfrentam processos de cassação:</p>
 
             <ul>
                 <li>Análise técnica e jurídica completa do processo</li>
@@ -154,7 +154,7 @@
                 <li><strong>Cassação:</strong> Perda definitiva; prazo mínimo de 2 anos; exige refazer todo processo de habilitação; registro permanente</li>
             </ul>
 
-            <h2>Por que Escolher a CNH em Dia</h2>
+            <h2>Por que Escolher a CNH em Dia Soluções</h2>
 
             <p>Processos de cassação são extremamente complexos e exigem conhecimento técnico profundo tanto da legislação de trânsito quanto de procedimentos administrativos e judiciais. Nossa equipe possui:</p>
 
@@ -178,7 +178,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>CNH em Dia</h3>
+                <h3>CNH em Dia Soluções</h3>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
@@ -205,14 +205,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdia.com.br</li>
+                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
                     <li>📍 São Paulo - SP</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script>
