--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CNH em Dia - Soluções Completas para sua Habilitação</title>
+    <title>CNH em Dia Soluções - Soluções Completas para sua Habilitação</title>
     <meta name="description" content="Soluções especializadas em CNH: multas, suspensão, cassação e perda de provisória. Recupere sua habilitação com quem entende.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia</span></a>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -68,7 +68,7 @@
     </section>
 
     <section style="background: var(--light-gray);">
-        <h2>Por que Escolher a CNH em Dia?</h2>
+        <h2>Por que Escolher a CNH em Dia Soluções?</h2>
         <p class="section-subtitle">Experiência, comprometimento e resultados comprovados</p>
         
         <div class="cards-container">
@@ -107,7 +107,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>CNH em Dia</h3>
+                <h3>CNH em Dia Soluções</h3>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
@@ -134,14 +134,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdia.com.br</li>
+                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
                     <li>📍 São Paulo - SP</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
 
