--- a/provisoria.html
+++ b/provisoria.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perda da Provisória - CNH em Dia</title>
+    <title>Perda da Provisória - CNH em Dia Soluções</title>
     <meta name="description" content="Defesa para condutores em período probatório. Orientação especializada para evitar a perda da CNH provisória.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia</span></a>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -148,7 +148,7 @@
 
             <h2>Nossos Serviços para CNH Provisória</h2>
 
-            <p>A CNH em Dia oferece assessoria especializada para condutores em período probatório:</p>
+            <p>A CNH em Dia Soluções oferece assessoria especializada para condutores em período probatório:</p>
 
             <ul>
                 <li>Orientação preventiva sobre regras do período probatório</li>
@@ -185,7 +185,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>CNH em Dia</h3>
+                <h3>CNH em Dia Soluções</h3>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
@@ -212,14 +212,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdia.com.br</li>
+                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
                     <li>📍 São Paulo - SP</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script>
