--- a/servicos.html
+++ b/servicos.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nossos Serviços - CNH em Dia</title>
+    <title>Nossos Serviços - CNH em Dia Soluções</title>
     <meta name="description" content="Conheça todos os serviços especializados da CNH em Dia: multas, suspensão, cassação e perda de provisória.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia</span></a>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -127,7 +127,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>CNH em Dia</h3>
+                <h3>CNH em Dia Soluções</h3>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
@@ -154,14 +154,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdia.com.br</li>
+                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
                     <li>📍 São Paulo - SP</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
 
