--- a/sobre.html
+++ b/sobre.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós - CNH em Dia</title>
+    <title>Sobre Nós - CNH em Dia Soluções</title>
     <meta name="description" content="Conheça a CNH em Dia, empresa especializada em soluções para problemas relacionados à habilitação.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia</span></a>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -26,7 +26,7 @@
     </header>
     <section class="hero">
         <div class="hero-content">
-            <h1>Sobre a CNH em Dia</h1>
+            <h1>Sobre a CNH em Dia Soluções</h1>
             <p>Especialistas em soluções para sua habilitação</p>
         </div>
     </section>
@@ -37,7 +37,7 @@
         
         <div style="max-width: 900px; margin: 0 auto;">
             <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem;">
-                A <strong>CNH em Dia</strong> é uma empresa especializada em soluções administrativas e jurídicas relacionadas à Carteira Nacional de Habilitação. Com anos de experiência no mercado, nossa equipe é formada por profissionais altamente qualificados que dominam profundamente a legislação de trânsito brasileira e os procedimentos administrativos dos órgãos competentes.
+                A <strong>CNH em Dia Soluções</strong> é uma empresa especializada em soluções administrativas e jurídicas relacionadas à Carteira Nacional de Habilitação. Com anos de experiência no mercado, nossa equipe é formada por profissionais altamente qualificados que dominam profundamente a legislação de trânsito brasileira e os procedimentos administrativos dos órgãos competentes.
             </p>
             
             <p style="font-size: 1.1rem; line-height: 1.8; margin-bottom: 1.5rem;">
@@ -191,7 +191,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>CNH em Dia</h3>
+                <h3>CNH em Dia Soluções</h3>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
@@ -218,14 +218,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdia.com.br</li>
+                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
                     <li>📍 São Paulo - SP</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script>
