--- a/suspensao.html
+++ b/suspensao.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suspensão da CNH - CNH em Dia</title>
+    <title>Suspensão da CNH - CNH em Dia Soluções</title>
     <meta name="description" content="Defesa contra suspensão da CNH. Recursos administrativos e estratégias para reverter ou reduzir o período de suspensão.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">CNH em <span>Dia</span></a>
+            <a href="index.html" class="logo">CNH em <span>Dia Soluções</span></a>
             <ul class="nav-links">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
@@ -114,7 +114,7 @@
 
             <h2>Nossos Serviços em Suspensão da CNH</h2>
 
-            <p>A CNH em Dia oferece assessoria completa para condutores que enfrentam processos de suspensão:</p>
+            <p>A CNH em Dia Soluções oferece assessoria completa para condutores que enfrentam processos de suspensão:</p>
 
             <ul>
                 <li>Análise detalhada do processo de suspensão</li>
@@ -147,7 +147,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>CNH em Dia</h3>
+                <h3>CNH em Dia Soluções</h3>
                 <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
             </div>
 
@@ -174,14 +174,14 @@
                 <h3>Contato</h3>
                 <ul>
                     <li>📞 (11) 9999-9999</li>
-                    <li>✉️ contato@cnhemdia.com.br</li>
+                    <li>✉️ contato@cnhemdiasolucoes.com.br</li>
                     <li>📍 São Paulo - SP</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 CNH em Dia. Todos os direitos reservados.</p>
+            <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
 
