--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CNH em Dia Soluções - Soluções Completas para sua Habilitação</title>
-    <meta name="description" content="Soluções especializadas em CNH: multas, suspensão, cassação e perda de provisória. Recupere sua habilitação com quem entende.">
+    <meta name="description" content="Soluções administrativas especializadas em CNH: multas, suspensão, cassação e perda de provisória. Orientação técnica para ajudar você a regularizar sua habilitação.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
 
     <section>
         <h2>Nossos Serviços</h2>
-        <p class="section-subtitle">Oferecemos soluções completas e personalizadas para todos os problemas relacionados à sua CNH</p>
+        <p class="section-subtitle">Oferecemos soluções personalizadas para auxiliar na resolução de questões relacionadas à sua CNH.</p>
         
         <div class="cards-container">
             <div class="card">
@@ -47,21 +47,21 @@
             <div class="card">
                 <div class="card-icon">⚠️</div>
                 <h3>Suspensão da CNH</h3>
-                <p>Defesa administrativa, recursos e estratégias para reverter ou minimizar o período de suspensão da sua habilitação.</p>
+                <p>Elaboração de recursos administrativos e orientação completa para reduzir ou evitar a suspensão da CNH.</p>
                 <a href="suspensao.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">🚫</div>
                 <h3>Cassação da CNH</h3>
-                <p>Atuação especializada em processos de cassação, com defesa técnica e jurídica para proteger seus direitos.</p>
+                <p>Atuação especializada em processos de cassação, com acompanhamento administrativo e orientação técnica para ajudar você a regularizar sua CNH.</p>
                 <a href="cassacao.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">📋</div>
                 <h3>Perda da Provisória</h3>
-                <p>Orientação e defesa para condutores que perderam a permissão para dirigir durante o período probatório.</p>
+                <p>Orientação e apoio administrativo para condutores que perderam a permissão para dirigir.</p>
                 <a href="provisoria.html" class="card-link">Saiba mais →</a>
             </div>
         </div>
@@ -69,7 +69,7 @@
 
     <section style="background: var(--light-gray);">
         <h2>Por que Escolher a CNH em Dia Soluções?</h2>
-        <p class="section-subtitle">Experiência, comprometimento e resultados comprovados</p>
+        <p class="section-subtitle">Experiência, comprometimento e histórico de excelência no atendimento.</p>
         
         <div class="cards-container">
             <div class="card">
@@ -100,7 +100,7 @@
 
     <section style="text-align: center; padding: 60px 5%;">
         <h2>Precisa de Ajuda com sua CNH?</h2>
-        <p class="section-subtitle">Entre em contato agora e receba uma análise gratuita do seu caso</p>
+        <p class="section-subtitle">Entre em contato agora e receba uma análise gratuita da sua situação junto ao Detran.</p>
         <a href="contato.html" class="cta-button">Solicitar Atendimento</a>
     </section>
 
