--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - CNH em Dia Soluções</title>
-    <meta name="description" content="Entre em contato com a CNH em Dia. Atendimento especializado para resolver problemas com sua habilitação.">
+    <meta name="description" content="Soluções administrativas especializadas em CNH: multas, suspensão, cassação e perda de provisória. Orientação técnica para ajudar você a regularizar sua habilitação.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
