--- a/cassacao.html
+++ b/cassacao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cassação da CNH - CNH em Dia Soluções</title>
-    <meta name="description" content="Defesa contra cassação da CNH. Assessoria jurídica e administrativa para proteger seus direitos em processos de cassação.">
+    <meta name="description" content="Assessoria administrativa e técnica em processos de cassação da CNH. Orientação especializada para ajudar você a regularizar sua habilitação e entender seus direitos.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,153 +24,136 @@
             </div>
         </nav>
     </header>
+
     <div class="content-page">
         <div class="content-wrapper">
             <h1>Cassação da CNH</h1>
-            
-            <p>A cassação da CNH é a penalidade mais grave prevista no Código de Trânsito Brasileiro, resultando na perda definitiva do direito de dirigir por um período mínimo de dois anos. Esta medida é aplicada em situações de extrema gravidade e requer defesa técnica especializada para proteger os direitos do condutor.</p>
+
+            <p>A cassação da CNH é uma das penalidades mais severas previstas no Código de Trânsito Brasileiro, resultando na perda do direito de dirigir por um período mínimo de dois anos. Essa medida exige atenção imediata e acompanhamento técnico para que o condutor entenda o processo e saiba como agir dentro das regras administrativas.</p>
 
             <h2>O que é a Cassação da CNH?</h2>
-            
-            <p>A cassação é a penalidade administrativa que anula completamente a Carteira Nacional de Habilitação do condutor. Diferentemente da suspensão, que é temporária e permite o retorno automático após o cumprimento do prazo, a cassação exige que o condutor refaça todo o processo de habilitação após o período mínimo de dois anos.</p>
+            <p>A cassação é uma penalidade administrativa que anula completamente a Carteira Nacional de Habilitação do condutor. Diferentemente da suspensão, que é temporária, a cassação obriga o motorista a refazer todo o processo de habilitação após o período mínimo de dois anos.</p>
 
-            <p>Durante o período de cassação, o condutor não pode dirigir nenhum tipo de veículo automotor e, após o cumprimento da penalidade, deverá realizar novamente os exames teóricos e práticos para obter uma nova habilitação.</p>
+            <p>Durante esse período, o condutor não pode dirigir veículos automotores e, ao final, deve passar novamente por todas as etapas — exames, cursos e provas — para obter uma nova CNH.</p>
 
             <h2>Motivos para Cassação da CNH</h2>
 
             <h3>Dirigir com CNH Suspensa</h3>
-            <p>Um dos motivos mais comuns de cassação é dirigir durante o período de suspensão da CNH. Esta conduta demonstra desrespeito à penalidade aplicada e resulta automaticamente em processo de cassação.</p>
+            <p>Dirigir durante o período de suspensão é um dos motivos mais comuns para cassação. Essa conduta é considerada grave e leva automaticamente à abertura do processo de cassação.</p>
 
             <h3>Reincidência em Infrações Gravíssimas</h3>
-            <p>Condutores que cometem infrações gravíssimas de forma reincidente, especialmente aquelas relacionadas a álcool, drogas ou direção perigosa, podem ter sua CNH cassada como forma de proteger a sociedade.</p>
+            <p>Motoristas que cometem repetidas infrações gravíssimas, especialmente relacionadas a álcool, drogas ou direção perigosa, podem ter a CNH cassada como medida de segurança.</p>
 
             <h3>Utilização de CNH Falsa ou Adulterada</h3>
-            <p>O uso de documento falso ou adulterado é crime previsto no Código Penal e também resulta em cassação da habilitação, além das consequências criminais.</p>
+            <p>O uso de documentos falsos ou adulterados resulta em cassação e pode gerar outras penalidades previstas em lei.</p>
 
-            <h3>Participação em Crime com Veículo</h3>
-            <p>Quando o veículo é utilizado como instrumento para a prática de crimes, como assaltos, sequestros ou tráfico de drogas, o condutor pode ter sua CNH cassada.</p>
+            <h3>Participação em Crimes com Veículo</h3>
+            <p>Quando o veículo é utilizado na prática de crimes, o condutor também pode ser penalizado com a cassação da habilitação.</p>
 
             <h3>Acúmulo de Suspensões</h3>
-            <p>Condutores que acumulam múltiplas suspensões em curto período de tempo demonstram comportamento reincidente e podem ter sua habilitação cassada.</p>
+            <p>Condutores que acumulam múltiplas suspensões em pouco tempo podem ter a CNH cassada por reincidência de comportamento infrator.</p>
 
             <div class="highlight-box">
-                <h3>⚠️ Gravidade da Cassação</h3>
-                <p>A cassação é a penalidade mais severa do CTB. Além de perder o direito de dirigir por no mínimo 2 anos, o condutor terá que refazer todo o processo de habilitação, incluindo aulas teóricas, práticas e todos os exames.</p>
+                <h3>⚠️ Atenção</h3>
+                <p>A cassação é a penalidade mais severa do CTB. Além da perda do direito de dirigir por no mínimo dois anos, é necessário refazer todo o processo de habilitação.</p>
             </div>
 
             <h2>Processo de Cassação</h2>
 
-            <h3>Instauração do Processo</h3>
-            <p>O processo de cassação é instaurado pelo órgão de trânsito competente quando identificada uma das situações que ensejam esta penalidade. O condutor é notificado sobre a abertura do processo e os motivos que o fundamentam.</p>
+            <h3>Instauração</h3>
+            <p>O órgão de trânsito competente instaura o processo de cassação quando identifica alguma das situações previstas. O condutor é notificado oficialmente sobre a abertura do processo e os motivos da penalidade.</p>
 
-            <h3>Notificação e Prazo de Defesa</h3>
-            <p>Após receber a notificação, o condutor tem o prazo de 15 dias para apresentar sua defesa prévia. Este é o momento crucial para contestar os fatos, apresentar provas e argumentos que possam evitar a cassação.</p>
+            <h3>Notificação e Prazo de Recurso</h3>
+            <p>Após receber a notificação, o condutor tem 15 dias para apresentar sua defesa administrativa, contestando os fatos e apresentando documentos ou informações que possam influenciar a decisão.</p>
 
             <h3>Análise e Decisão</h3>
-            <p>A defesa apresentada é analisada pelo órgão de trânsito, que emite uma decisão. Caso a defesa seja indeferida, é possível recorrer à JARI (Junta Administrativa de Recursos de Infrações) no prazo de 30 dias.</p>
+            <p>A defesa é avaliada pelo órgão autuador, que emite uma decisão. Caso indeferida, o condutor pode recorrer à JARI (Junta Administrativa de Recursos de Infrações) em até 30 dias.</p>
 
             <h3>Recursos em Instâncias Superiores</h3>
-            <p>Se o recurso à JARI for negado, ainda é possível recorrer ao CETRAN (Conselho Estadual de Trânsito) e, em casos específicos, ao CONTRAN (Conselho Nacional de Trânsito). Cada instância representa uma nova oportunidade de reverter a cassação.</p>
-
-            <h3>Medidas Judiciais</h3>
-            <p>Esgotadas as vias administrativas, é possível buscar a proteção judicial através de mandado de segurança ou ação ordinária, especialmente quando há ilegalidades ou vícios no processo administrativo.</p>
+            <p>Se o recurso à JARI for negado, ainda é possível recorrer ao CETRAN (Conselho Estadual de Trânsito) e, em alguns casos, ao CONTRAN. Cada instância representa uma nova oportunidade de revisão do processo.</p>
 
             <h2>Consequências da Cassação</h2>
 
             <h3>Perda do Direito de Dirigir</h3>
-            <p>O condutor perde completamente o direito de dirigir por um período mínimo de dois anos. Durante este período, dirigir qualquer veículo automotor constitui crime de desobediência, além de infração administrativa.</p>
+            <p>Durante o período da cassação, o motorista fica totalmente impedido de dirigir. Caso seja flagrado conduzindo, poderá sofrer novas penalidades.</p>
 
-            <h3>Necessidade de Reabilitação Completa</h3>
-            <p>Após o período de cassação, o condutor não recupera automaticamente sua habilitação. É necessário refazer todo o processo de habilitação, incluindo:</p>
+            <h3>Reabilitação Obrigatória</h3>
+            <p>Após o período mínimo, o condutor deverá realizar novamente todos os exames e etapas para obter uma nova habilitação.</p>
 
             <ul>
-                <li>Exames médicos e psicotécnicos</li>
+                <li>Exames médicos e psicológicos</li>
                 <li>Curso teórico completo</li>
-                <li>Exame teórico</li>
-                <li>Aulas práticas de direção</li>
+                <li>Prova teórica</li>
+                <li>Aulas práticas</li>
                 <li>Exame prático de direção</li>
             </ul>
 
-            <h3>Impactos Profissionais e Pessoais</h3>
-            <p>Para condutores profissionais, a cassação pode significar a perda definitiva da profissão. Para todos, representa sérias limitações de mobilidade e dependência de terceiros por um longo período.</p>
+            <h3>Impactos Pessoais e Profissionais</h3>
+            <p>A cassação pode afetar diretamente a vida pessoal e profissional, especialmente para motoristas que dependem da CNH para trabalhar.</p>
 
-            <h3>Registro Permanente</h3>
-            <p>A cassação fica registrada permanentemente no histórico do condutor, o que pode dificultar a obtenção de seguros, aumentar custos e gerar restrições em oportunidades profissionais futuras.</p>
+            <h3>Registro no Histórico</h3>
+            <p>A cassação permanece registrada no histórico do condutor e pode influenciar em futuras emissões de seguro e contratações.</p>
 
             <h2>Como Evitar a Cassação</h2>
 
-            <h3>Defesa Técnica Especializada</h3>
-            <p>A elaboração de uma defesa técnica robusta é fundamental para evitar a cassação. Nossa equipe analisa minuciosamente o processo, identificando vícios formais, irregularidades procedimentais e argumentos jurídicos que possam reverter a penalidade.</p>
+            <h3>Orientação Técnica Especializada</h3>
+            <p>Contar com orientação técnica é essencial para compreender os prazos e etapas do processo, evitando erros que possam levar à cassação definitiva.</p>
 
-            <h3>Contestação dos Fatos</h3>
-            <p>Quando os fatos que motivaram o processo de cassação são contestáveis, é essencial apresentar provas e argumentos que demonstrem a inexistência da conduta ou a presença de circunstâncias atenuantes.</p>
+            <h3>Apresentação Correta dos Recursos</h3>
+            <p>O recurso administrativo deve ser elaborado de forma clara e fundamentada, respeitando os prazos e procedimentos legais.</p>
 
-            <h3>Identificação de Vícios Processuais</h3>
-            <p>Muitos processos de cassação apresentam vícios formais que podem invalidar a penalidade. Nossa equipe identifica estas irregularidades e as utiliza estrategicamente na defesa.</p>
-
-            <h3>Recursos Bem Fundamentados</h3>
-            <p>Cada instância recursal exige estratégia específica e fundamentação adequada. Recursos genéricos ou mal elaborados têm poucas chances de sucesso. Nossa experiência permite elaborar recursos técnicos e persuasivos.</p>
+            <h3>Identificação de Irregularidades</h3>
+            <p>Processos administrativos podem conter falhas formais. Identificar e apresentar essas falhas de forma técnica pode alterar o resultado final.</p>
 
             <div class="highlight-box">
-                <h3>💡 Ação Imediata é Essencial</h3>
-                <p>Em processos de cassação, o tempo é ainda mais crítico. Os prazos são curtos e não podem ser perdidos. Busque assessoria especializada imediatamente após receber a notificação.</p>
+                <h3>💡 Agir Rápido Faz Diferença</h3>
+                <p>Os prazos para defesa e recurso são curtos. Procure orientação técnica assim que receber a notificação de instauração do processo.</p>
             </div>
 
             <h2>Reabilitação Após Cassação</h2>
-
-            <p>Caso a cassação seja confirmada e o período de penalidade cumprido, o processo de reabilitação exige:</p>
-
-            <h3>Aguardar o Prazo Mínimo</h3>
-            <p>É necessário aguardar no mínimo dois anos a partir da cassação. Este prazo pode ser maior dependendo da gravidade da infração que motivou a cassação.</p>
-
-            <h3>Refazer o Processo de Habilitação</h3>
-            <p>Após o prazo, o condutor deve iniciar novamente todo o processo de primeira habilitação, como se nunca tivesse sido habilitado anteriormente.</p>
-
-            <h3>Comprovar Idoneidade</h3>
-            <p>Em alguns casos, pode ser necessário comprovar que as condições que levaram à cassação foram superadas, especialmente em casos envolvendo álcool, drogas ou crimes.</p>
-
-            <h2>Nossos Serviços em Cassação da CNH</h2>
-
-            <p>A CNH em Dia Soluções oferece assessoria completa e especializada para condutores que enfrentam processos de cassação:</p>
+            <p>Após o cumprimento do prazo mínimo, o condutor deverá realizar todo o processo de reabilitação para voltar a dirigir:</p>
 
             <ul>
-                <li>Análise técnica e jurídica completa do processo</li>
-                <li>Elaboração de defesa prévia robusta e fundamentada</li>
-                <li>Recursos administrativos em todas as instâncias (JARI, CETRAN, CONTRAN)</li>
-                <li>Identificação de vícios processuais e irregularidades</li>
-                <li>Medidas judiciais quando necessário (mandado de segurança, ações ordinárias)</li>
-                <li>Acompanhamento processual completo até decisão final</li>
-                <li>Orientação sobre direitos e deveres durante o processo</li>
-                <li>Assessoria para reabilitação após cumprimento da penalidade</li>
-                <li>Estratégias personalizadas para cada caso específico</li>
+                <li>Aguardar o período de dois anos</li>
+                <li>Refazer o processo de habilitação completo</li>
+                <li>Comprovar aptidão física e mental</li>
+                <li>Participar de cursos e exames exigidos pelo Detran</li>
+            </ul>
+
+            <h2>Nossos Serviços em Cassação da CNH</h2>
+            <p>A <strong>CNH em Dia Soluções</strong> oferece suporte completo para condutores que enfrentam processos administrativos de cassação:</p>
+
+            <ul>
+                <li>Análise técnica do processo administrativo</li>
+                <li>Elaboração e acompanhamento de recursos administrativos</li>
+                <li>Identificação de possíveis falhas e inconsistências</li>
+                <li>Orientação sobre prazos, direitos e deveres</li>
+                <li>Encaminhamento a advogados parceiros quando houver necessidade de atuação judicial</li>
+                <li>Suporte completo até a decisão final do processo</li>
+                <li>Assessoria para reabilitação após o cumprimento da penalidade</li>
             </ul>
 
             <h2>Diferença entre Suspensão e Cassação</h2>
-
-            <p>É importante compreender as diferenças fundamentais entre estas penalidades:</p>
-
             <ul>
-                <li><strong>Suspensão:</strong> Temporária, com prazo definido; retorno automático após cumprimento; não exige novos exames</li>
-                <li><strong>Cassação:</strong> Perda definitiva; prazo mínimo de 2 anos; exige refazer todo processo de habilitação; registro permanente</li>
+                <li><strong>Suspensão:</strong> Penalidade temporária com prazo definido e retorno automático após o cumprimento.</li>
+                <li><strong>Cassação:</strong> Perda definitiva da CNH por no mínimo dois anos, exigindo reabilitação completa.</li>
             </ul>
 
             <h2>Por que Escolher a CNH em Dia Soluções</h2>
-
-            <p>Processos de cassação são extremamente complexos e exigem conhecimento técnico profundo tanto da legislação de trânsito quanto de procedimentos administrativos e judiciais. Nossa equipe possui:</p>
+            <p>Processos de cassação exigem conhecimento técnico e atenção aos detalhes. Nossa equipe atua com:</p>
 
             <ul>
-                <li>Experiência comprovada em defesas de cassação</li>
+                <li>Experiência comprovada em processos administrativos de trânsito</li>
                 <li>Conhecimento técnico especializado</li>
-                <li>Estratégias personalizadas para cada caso</li>
-                <li>Atuação em todas as instâncias administrativas e judiciais</li>
-                <li>Compromisso com a defesa dos direitos do condutor</li>
-                <li>Histórico de sucesso em casos complexos</li>
+                <li>Atuação em todas as instâncias administrativas</li>
+                <li>Encaminhamento para advogados parceiros em casos que exigem atuação judicial</li>
+                <li>Comprometimento e ética em todos os atendimentos</li>
             </ul>
 
-            <p>Não deixe sua habilitação e sua liberdade de ir e vir nas mãos do acaso. Conte com quem entende do assunto e pode fazer a diferença no resultado do seu processo.</p>
+            <p>Não deixe sua habilitação nas mãos do acaso. Busque orientação técnica e acompanhamento adequado para conduzir o processo de forma segura.</p>
 
             <div style="text-align: center; margin-top: 3rem;">
-                <a href="contato.html" class="cta-button">Defender Contra Cassação Agora</a>
+                <a href="contato.html" class="cta-button">Regularizar Minha CNH Agora</a>
             </div>
         </div>
     </div>
@@ -179,7 +162,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
-                <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
+                <p>Soluções administrativas e técnicas para manter sua habilitação regularizada.</p>
             </div>
 
             <div class="footer-section">
@@ -215,6 +198,7 @@
             <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
+
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
         const navLinks = document.querySelector('.nav-links');
@@ -222,6 +206,7 @@
         menuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
         });
+
         window.addEventListener('scroll', () => {
             const header = document.querySelector('header');
             if (window.scrollY > 100) {
@@ -233,4 +218,3 @@
     </script>
 </body>
 </html>
-
