--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CNH em Dia Soluções - Soluções Completas para sua Habilitação</title>
-    <meta name="description" content="Soluções administrativas especializadas em CNH: multas, suspensão, cassação e perda de provisória. Orientação técnica para ajudar você a regularizar sua habilitação.">
+    <title>CNH em Dia Soluções - Regularização Administrativa de Habilitação</title>
+    <meta name="description" content="Soluções especializadas em processos administrativos de CNH: multas, suspensão, cassação e perda de provisória. Regularize sua habilitação com segurança e suporte técnico especializado.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,44 +24,45 @@
             </div>
         </nav>
     </header>
+
     <section class="hero">
         <div class="hero-content">
             <h1>Sua CNH em Dia, Sua Vida em Movimento</h1>
-            <p>Soluções especializadas para resolver problemas com multas, suspensão, cassação e perda de provisória. Conte com nossa expertise para regularizar sua habilitação.</p>
+            <p>Soluções administrativas para resolver questões com multas, suspensão, cassação e perda de provisória. Conte com nossa equipe especializada para regularizar sua habilitação com segurança.</p>
             <a href="contato.html" class="cta-button">Fale Conosco Agora</a>
         </div>
     </section>
 
     <section>
         <h2>Nossos Serviços</h2>
-        <p class="section-subtitle">Oferecemos soluções personalizadas para auxiliar na resolução de questões relacionadas à sua CNH.</p>
+        <p class="section-subtitle">Soluções completas e personalizadas para regularizar sua situação junto aos órgãos de trânsito</p>
         
         <div class="cards-container">
             <div class="card">
                 <div class="card-icon">🚗</div>
                 <h3>Multas de Trânsito</h3>
-                <p>Recursos de multas, defesa prévia, análise técnica e orientação completa para contestar infrações indevidas.</p>
+                <p>Elaboração de recursos administrativos, defesa prévia e orientação técnica para contestar autuações indevidas.</p>
                 <a href="multas.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">⚠️</div>
                 <h3>Suspensão da CNH</h3>
-                <p>Elaboração de recursos administrativos e orientação completa para reduzir ou evitar a suspensão da CNH.</p>
+                <p>Suporte completo em processos de suspensão, com análise documental e estratégias para reduzir impactos administrativos.</p>
                 <a href="suspensao.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">🚫</div>
                 <h3>Cassação da CNH</h3>
-                <p>Atuação especializada em processos de cassação, com acompanhamento administrativo e orientação técnica para ajudar você a regularizar sua CNH.</p>
+                <p>Atuação administrativa em processos de cassação, com acompanhamento técnico e suporte especializado para defesa de seus direitos.</p>
                 <a href="cassacao.html" class="card-link">Saiba mais →</a>
             </div>
 
             <div class="card">
                 <div class="card-icon">📋</div>
                 <h3>Perda da Provisória</h3>
-                <p>Orientação e apoio administrativo para condutores que perderam a permissão para dirigir.</p>
+                <p>Orientação para condutores que perderam a permissão durante o período probatório e desejam regularizar sua situação junto ao DETRAN.</p>
                 <a href="provisoria.html" class="card-link">Saiba mais →</a>
             </div>
         </div>
@@ -69,38 +70,38 @@
 
     <section style="background: var(--light-gray);">
         <h2>Por que Escolher a CNH em Dia Soluções?</h2>
-        <p class="section-subtitle">Experiência, comprometimento e histórico de excelência no atendimento.</p>
+        <p class="section-subtitle">Experiência, transparência e resultados administrativos comprovados</p>
         
         <div class="cards-container">
             <div class="card">
                 <div class="card-icon">✓</div>
                 <h3>Especialização</h3>
-                <p>Equipe altamente qualificada e especializada em legislação de trânsito e processos administrativos.</p>
+                <p>Equipe com ampla experiência em legislação de trânsito e trâmites administrativos perante órgãos competentes.</p>
             </div>
 
             <div class="card">
                 <div class="card-icon">⚡</div>
                 <h3>Agilidade</h3>
-                <p>Atendimento rápido e eficiente, respeitando todos os prazos legais para garantir seus direitos.</p>
+                <p>Atendimento rápido e eficaz, com acompanhamento próximo de cada etapa do processo administrativo.</p>
             </div>
 
             <div class="card">
                 <div class="card-icon">🎯</div>
                 <h3>Resultados</h3>
-                <p>Histórico comprovado de sucesso na resolução de casos complexos envolvendo CNH.</p>
+                <p>Histórico consistente de regularizações e soluções administrativas bem-sucedidas para nossos clientes.</p>
             </div>
 
             <div class="card">
                 <div class="card-icon">💼</div>
                 <h3>Atendimento Personalizado</h3>
-                <p>Cada caso é único. Oferecemos soluções customizadas para sua situação específica.</p>
+                <p>Cada caso é analisado individualmente para oferecer a melhor orientação técnica e estratégica possível.</p>
             </div>
         </div>
     </section>
 
     <section style="text-align: center; padding: 60px 5%;">
         <h2>Precisa de Ajuda com sua CNH?</h2>
-        <p class="section-subtitle">Entre em contato agora e receba uma análise gratuita da sua situação junto ao Detran.</p>
+        <p class="section-subtitle">Entre em contato agora e receba uma análise gratuita da sua situação administrativa</p>
         <a href="contato.html" class="cta-button">Solicitar Atendimento</a>
     </section>
 
@@ -108,7 +109,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
-                <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
+                <p>Atuação administrativa especializada em processos de habilitação. Transparência e comprometimento para manter você na estrada.</p>
             </div>
 
             <div class="footer-section">
@@ -194,4 +195,3 @@
     </script>
 </body>
 </html>
-
