--- a/multas.html
+++ b/multas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multas de Trânsito - CNH em Dia Soluções</title>
-    <meta name="description" content="Recursos e defesa contra multas de trânsito. Análise técnica e contestação de infrações indevidas.">
+    <meta name="description" content="Orientação e suporte administrativo para contestação de multas de trânsito. Análise técnica e acompanhamento de processos.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,101 +24,98 @@
             </div>
         </nav>
     </header>
+
     <div class="content-page">
         <div class="content-wrapper">
             <h1>Multas de Trânsito</h1>
             
-            <p>As multas de trânsito são penalidades aplicadas aos condutores que cometem infrações previstas no Código de Trânsito Brasileiro (CTB). Além do valor financeiro, as multas podem gerar pontos na CNH e, em casos mais graves, levar à suspensão ou cassação do direito de dirigir.</p>
+            <p>As multas de trânsito são penalidades aplicadas aos condutores que cometem infrações previstas no Código de Trânsito Brasileiro (CTB). Além do valor financeiro, podem gerar pontos na CNH e, em casos mais graves, levar à suspensão ou cassação do direito de dirigir.</p>
 
-            <h2>O que são Multas de Trânsito?</h2>
+            <h2>O que São Multas de Trânsito?</h2>
             
-            <p>As multas de trânsito são sanções administrativas impostas aos condutores que violam as normas estabelecidas pelo Código de Trânsito Brasileiro. Elas são classificadas em diferentes categorias conforme a gravidade da infração: leve, média, grave e gravíssima.</p>
+            <p>São sanções administrativas aplicadas aos condutores que violam normas estabelecidas pelo CTB. Elas se classificam conforme a gravidade da infração: leve, média, grave e gravíssima — cada uma com pontuação e valores diferentes.</p>
 
-            <p>Cada categoria possui um valor específico de multa e uma pontuação correspondente que é adicionada ao prontuário do condutor. O acúmulo de pontos pode resultar em penalidades mais severas, incluindo a suspensão do direito de dirigir.</p>
+            <p>O acúmulo de pontos pode resultar em penalidades mais severas, incluindo a suspensão temporária do direito de dirigir.</p>
 
             <h2>Tipos de Infrações</h2>
 
             <h3>Infrações Leves</h3>
-            <p>São infrações de menor gravidade que geram 3 pontos na CNH. Exemplos incluem estacionar em local proibido, dirigir com farol queimado durante o dia, entre outras.</p>
+            <p>Geram 3 pontos na CNH. Exemplos: estacionar em local proibido, dirigir com farol queimado, entre outras.</p>
 
             <h3>Infrações Médias</h3>
-            <p>Infrações de gravidade intermediária que resultam em 4 pontos. Exemplos: estacionar em fila dupla, fazer conversão em local proibido, dirigir com o para-brisa trincado.</p>
+            <p>Resultam em 4 pontos. Exemplos: estacionar em fila dupla, fazer conversão irregular, dirigir com para-brisa trincado.</p>
 
             <h3>Infrações Graves</h3>
-            <p>São infrações mais sérias que geram 5 pontos na CNH. Incluem excesso de velocidade entre 20% e 50% acima do limite, avançar sinal vermelho, dirigir sem cinto de segurança, entre outras.</p>
+            <p>Geram 5 pontos. Exemplos: excesso de velocidade entre 20% e 50% acima do limite, avançar sinal vermelho, dirigir sem cinto.</p>
 
             <h3>Infrações Gravíssimas</h3>
-            <p>As infrações mais graves do CTB, que resultam em 7 pontos e podem levar à suspensão imediata do direito de dirigir. Exemplos: dirigir sob efeito de álcool, excesso de velocidade superior a 50% do limite, participar de "racha", recusar teste do bafômetro.</p>
+            <p>Resultam em 7 pontos e podem causar suspensão imediata. Exemplos: dirigir sob efeito de álcool, racha, recusa ao teste do bafômetro.</p>
 
             <div class="highlight-box">
                 <h3>⚠️ Importante Saber</h3>
-                <p>Você tem o direito de contestar qualquer multa que considere indevida. O prazo para apresentar defesa prévia é de 15 dias a partir da notificação da autuação, e de 30 dias para recurso após o indeferimento da defesa prévia.</p>
+                <p>Todo condutor tem o direito de apresentar defesa ou recurso administrativo caso identifique irregularidades na autuação. O prazo para defesa prévia é de até 15 dias, e para recurso, até 30 dias após o indeferimento da defesa.</p>
             </div>
 
-            <h2>Como Contestar uma Multa</h2>
-
-            <p>O processo de contestação de multas de trânsito envolve diferentes etapas e prazos que devem ser rigorosamente respeitados para garantir o direito de defesa do condutor.</p>
+            <h2>Etapas para Contestar uma Multa</h2>
 
             <h3>1. Defesa Prévia</h3>
-            <p>A primeira oportunidade de contestação ocorre na fase de defesa prévia, que deve ser apresentada dentro de 15 dias após o recebimento da notificação de autuação. Nesta fase, é possível questionar aspectos técnicos da autuação, como erro na identificação do veículo, falha no equipamento de medição, ou ausência de sinalização adequada.</p>
+            <p>É a primeira oportunidade de contestar uma autuação. Nessa fase, é possível apontar erros técnicos, falhas na identificação do veículo ou ausência de sinalização adequada.</p>
 
             <h3>2. Recurso em Primeira Instância</h3>
-            <p>Caso a defesa prévia seja indeferida, o condutor tem o direito de apresentar recurso em primeira instância administrativa no prazo de 30 dias. Este recurso é analisado pela JARI (Junta Administrativa de Recursos de Infrações) do órgão autuador.</p>
+            <p>Se a defesa prévia for indeferida, o condutor pode apresentar recurso administrativo à JARI (Junta Administrativa de Recursos de Infrações).</p>
 
             <h3>3. Recurso em Segunda Instância</h3>
-            <p>Se o recurso em primeira instância for negado, ainda é possível recorrer ao CETRAN (Conselho Estadual de Trânsito) ou CONTRAN (Conselho Nacional de Trânsito), dependendo do caso, no prazo de 30 dias após a decisão da JARI.</p>
+            <p>Caso o recurso em primeira instância seja negado, é possível recorrer ao CETRAN ou CONTRAN, conforme o órgão autuador.</p>
 
             <h2>Motivos Comuns para Contestação</h2>
 
             <ul>
-                <li><strong>Erro na identificação do veículo:</strong> Placa, modelo ou cor do veículo incorretos na autuação</li>
-                <li><strong>Falha no equipamento:</strong> Radar sem calibração, foto ilegível ou equipamento sem certificação</li>
-                <li><strong>Sinalização inadequada:</strong> Ausência ou má visibilidade de placas indicativas</li>
-                <li><strong>Erro na tipificação:</strong> Infração classificada incorretamente</li>
-                <li><strong>Condutor não identificado:</strong> Quando não é possível identificar quem estava dirigindo</li>
+                <li><strong>Erro na identificação:</strong> Dados incorretos no auto de infração</li>
+                <li><strong>Falha no equipamento:</strong> Radar sem calibração ou foto ilegível</li>
+                <li><strong>Sinalização deficiente:</strong> Ausência ou má visibilidade de placas</li>
+                <li><strong>Erro na tipificação:</strong> Infração classificada de forma incorreta</li>
                 <li><strong>Prescrição:</strong> Multa aplicada fora do prazo legal</li>
-                <li><strong>Vício formal:</strong> Erros no processo de autuação que invalidam a multa</li>
+                <li><strong>Vício formal:</strong> Falhas no processo administrativo</li>
             </ul>
 
-            <h2>Nossos Serviços em Multas de Trânsito</h2>
+            <h2>Como a CNH em Dia Soluções Pode Ajudar</h2>
 
-            <p>A CNH em Dia Soluções oferece assessoria completa para contestação de multas de trânsito, incluindo:</p>
+            <p>Oferecemos suporte completo em processos administrativos relacionados a multas de trânsito, incluindo:</p>
 
             <ul>
-                <li>Análise técnica detalhada da autuação</li>
+                <li>Análise técnica da autuação</li>
                 <li>Identificação de irregularidades e vícios processuais</li>
-                <li>Elaboração de defesa prévia fundamentada</li>
-                <li>Recursos administrativos em todas as instâncias</li>
-                <li>Acompanhamento processual completo</li>
+                <li>Elaboração de recursos administrativos</li>
+                <li>Acompanhamento das etapas junto aos órgãos competentes</li>
                 <li>Orientação sobre prazos e procedimentos</li>
-                <li>Estratégias para redução de pontos na CNH</li>
             </ul>
 
-            <h2>Benefícios de Contestar</h2>
+            <h2>Por Que Contestar?</h2>
 
-            <p>Contestar uma multa indevida traz diversos benefícios além da economia financeira. Ao recorrer com sucesso, você evita a pontuação na CNH, o que pode prevenir futuras suspensões do direito de dirigir. Além disso, demonstra o exercício legítimo dos seus direitos como condutor e contribui para a correção de erros no sistema de fiscalização.</p>
+            <p>Recorrer de uma multa indevida evita a perda de pontos e possíveis suspensões da CNH. Além disso, é um direito de todo condutor buscar a correção de erros no sistema de fiscalização.</p>
 
             <div class="highlight-box">
                 <h3>💡 Dica Importante</h3>
-                <p>Mesmo que você tenha cometido a infração, em alguns casos é possível obter a redução ou anulação da multa por vícios formais no processo de autuação. Consulte um especialista para avaliar seu caso.</p>
+                <p>Mesmo quando a infração parece válida, muitos autos de infração possuem erros formais que podem anular a penalidade. Por isso, é essencial que seu caso seja analisado com atenção técnica.</p>
             </div>
 
-            <h2>Quando Procurar Ajuda Especializada</h2>
+            <h2>Quando Buscar Orientação</h2>
 
-            <p>É recomendável buscar assessoria especializada quando a multa envolver infrações gravíssimas, quando houver risco de suspensão da CNH por acúmulo de pontos, em casos de multas com valores elevados, ou quando você identificar irregularidades evidentes na autuação mas não souber como fundamentar tecnicamente a defesa.</p>
+            <p>Procure orientação especializada em casos de multas gravíssimas, risco de suspensão da CNH, valores elevados, ou dúvidas sobre irregularidades no processo.</p>
 
-            <p>Nossa equipe possui experiência em análise técnica de autuações e conhecimento profundo da legislação de trânsito, o que aumenta significativamente as chances de sucesso na contestação.</p>
+            <p>A equipe da <strong>CNH em Dia Soluções</strong> atua de forma técnica e administrativa, auxiliando o condutor a compreender seus direitos e apresentar recursos fundamentados junto aos órgãos de trânsito.</p>
 
             <div style="text-align: center; margin-top: 3rem;">
-                <a href="contato.html" class="cta-button">Contestar Minha Multa Agora</a>
+                <a href="contato.html" class="cta-button">Analisar Minha Multa Agora</a>
             </div>
         </div>
     </div>
+
     <footer>
         <div class="footer-content">
             <div class="footer-section">
                 <h3>CNH em Dia Soluções</h3>
-                <p>Soluções especializadas para manter sua habilitação regularizada e você na estrada.</p>
+                <p>Orientação e suporte técnico para manter sua habilitação regularizada.</p>
             </div>
 
             <div class="footer-section">
@@ -154,6 +151,7 @@
             <p>&copy; 2025 CNH em Dia Soluções. Todos os direitos reservados.</p>
         </div>
     </footer>
+
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
         const navLinks = document.querySelector('.nav-links');
@@ -161,15 +159,11 @@
         menuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
         });
+
         window.addEventListener('scroll', () => {
             const header = document.querySelector('header');
-            if (window.scrollY > 100) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
+            header.classList.toggle('scrolled', window.scrollY > 100);
         });
     </script>
 </body>
 </html>
-
